--- a/app/views/registers/_register.html.erb
+++ b/app/views/registers/_register.html.erb
@@ -1,9 +1,11 @@
 |count = <%= @count %>|
 
+<% config = Cfrp::Application.config %>
+
 <%# params: register %>
 <div class='register'>
   <% if register.register_image != nil %>
-  <div><a href="<%= register.register_image.filepath %>" target="_blank"><img src='<%= register.register_image.filepath %>' width='100' /></a></div>
+  <div><a href="<%= config.repertoire_assets.path_prefix %>/<%= register.register_image.filepath %>" target="_blank"><img src='<%= config.repertoire_assets.path_prefix %>/<%= register.register_image.filepath %>' width='100' /></a></div>
   <% end %>
 
   <div><%= register.representation %> <%= register.date %></div>
