Updates to add facets for verification state as well as assigned user.

--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -35,8 +35,6 @@ $().ready(function() {
     <div id='season' class='facet' title='Seasons'></div>
     <div id='weekday' class='facet' title='Weekdays'></div>
     <div id='total_receipts_recorded_l' class='facet' title='Total Receipts (Livre)'></div>
-    <!-- div id='nobel_year' class='facet' title='Year Awarded'></div>
-    <div id='degree' class='facet' title='Degree at MIT'></div -->
   </div>
 
   <div id='results'></div>
@@ -47,6 +45,8 @@ $().ready(function() {
     <div class='clear'></div>
     <div id='title2' class='facet' title='Play 2'></div>
     <div id='author2' class='facet' title='Author 2'></div>
-    <!-- div id='season' class='facet' title='Season'></div -->
+    <div id='verification_state' class='facet' title='Verification State (DUMMY DATA)'></div>
+    <div id='register_contributor_name' class='facet' title='Register Contributor/Verifier' ></div>
+    <!-- div id='total_receipts' class='facet' title='Total Receipts'></div -->
   </div>
 </div>
