--- a/app/views/registers/_register.html.erb
+++ b/app/views/registers/_register.html.erb
@@ -8,8 +8,10 @@
   <div><a href="<%= config.repertoire_assets.path_prefix %>/<%= register.register_image.filepath %>" target="_blank"><img src='<%= config.repertoire_assets.path_prefix %>/<%= register.register_image.filepath %>' width='100' /></a></div>
   <% end %>
 
+  <div><input type='submit' value='edit' name='edit' /><input type='submit' value='delete' name='delete' /></div>
+
   <div><span class='label'>Repr&#233;sentation:</span> <%= register.representation %></div>
-  <div><span class='label'>Date:</span> <%= register.date.day %>/<%= register.date.month %>/<%= register.date.year %></div>
+  <div><span class='label'>Date:</span> <%= sprintf('%02d', register.date.day) %>/<%= sprintf('%02d', register.date.month) %>/<%= register.date.year %></div>
 
   <% register.register_plays.sort {|a, b| a.ordering <=> b.ordering }.each do |rp| %>
   <div><span class='label'>Play, Author <%= rp.ordering + 1 %>:</span><br /> <%= rp.play.title %>, <%= rp.play.author %></div>
@@ -17,7 +19,11 @@
 
   <div><span class='label'>Page Text:</span></div>
   <div><%= register.page_text %></div>
-  <% if (register.misc_notes != '' ||  register.for_editor_notes != '') %>
+
+  <br />
+  <div><span class='label'>Status:</span> <span class='<%= register.verification_state.name.gsub(/\s/, '_') %>'><%= register.verification_state.name %></span></div>
+
+  <% if (register.misc_notes !~ /^\s*$/ || register.for_editor_notes !~ /^\s*$/) %>
   <br />
   <div><span class='label'>Notes:</span></div>
   <div class='editor'><%= register.for_editor_notes %></div>
