--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,32 @@
 </head>
 <body>
   <div id="header">
-    <ul>
-      <%# Can't figure out how to add this charset to file without making the *server* barf?  What am I doing wrong? %>
-      <li><a class='title' href="<%= url_for :root %>">Com&#233;die-Fran&#231;aise Registers Project</li>
-      <li><%= link_to "Registers List", :registers %></li>
-      <li><%#= link_to "Manage Users", :users %></li>
-      <% if current_user %>
-      <li class="logout">Logged in as:
-        <span class='user_info'><%= current_user.first_name %> <%= current_user.last_name %></span>
-	(<span class='user_info'><%= current_user.email %></span>)
-	<%= link_to "Log Out", :destroy_user_session %></li>
-      <% end %>
-    </ul>
   </div>
 
   <div id="container">
-<%= yield %>
+    <%= yield %>
+  </div>
+
+  <div id="footer">
+    <div class="navbar navbar-fixed-bottom">
+      <div class="navbar-inner">
+	<div class="container">
+          <a class='brand' href="<%= url_for :root %>">Com&#233;die-Fran&#231;aise Registers Project</a>
+
+	  <ul class='nav pull-right'>
+	    <%# Can't figure out how to add this charset to file without making the *server* barf?  What am I doing wrong? %>
+            <li><%= link_to "Registers List", :registers %></li>
+	    <% if current_user %>
+	    <!-- li><%#= link_to "Manage Users", :users %></li -->
+	    <li class="logout">Logged in as:
+              <span class='user_info'><%= current_user.first_name %> <%= current_user.last_name %></span>
+	      (<span class='user_info'><%= current_user.email %></span>)
+	      <%= link_to "Log Out", :destroy_user_session %></li>
+	    <% end %>
+	  </ul>
+	</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
