--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -1,4 +1,8 @@
-<%= form_for(@register) do |f| %>
+<div class='span8' id='form'>
+<%= form_for(@register, :html => {:class => 'form-horizontal'}) do |f| %>
+<fieldset>
+  <legend><%= @register.register_num %></legend>
+
   <% if @register.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@register.errors.count, "error") %> prohibited this register from being saved:</h2>
@@ -11,111 +15,166 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :register_num %><br />
-    <%= f.text_field :register_num %>
+  <div class="control-group">
+    <%= f.label :register_num, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :register_num %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :season %><br />
-    <%= f.text_field :season %>
+  <div class="control-group">
+    <%= f.label :season, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :season %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :representation %><br />
-    <%= f.text_field :representation %>
+  <div class="control-group">
+    <%= f.label :representation, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :representation %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :ouverture_flag %><br />
-    <%= f.check_box :ouverture_flag %>
+  <div class="control-group">
+    <%= f.label :ouverture_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :ouverture_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :ouverture %><br />
-    <%= f.check_box :ouverture %>
+  <div class="control-group">
+    <%= f.label :ouverture, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :ouverture %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :cloture_flag %><br />
-    <%= f.check_box :cloture_flag %>
+  <div class="control-group">
+    <%= f.label :cloture_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :cloture_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :cloture %><br />
-    <%= f.check_box :cloture %>
+  <div class="control-group">
+    <%= f.label :cloture, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :cloture %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :weekday %><br />
-    <%= f.text_field :weekday %>
+  <div class="control-group">
+    <%= f.label :weekday, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :weekday %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :date %><br />
-    <%= f.datetime_select :date %>
+  <div class="control-group">
+    <%= f.label :date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :date, {}, { :class => 'span1' } %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :payment_notes %><br />
-    <%= f.text_area :payment_notes %>
+  <div class="control-group">
+    <%= f.label :payment_notes, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :payment_notes %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :payment_notes %><br />
-    <%= f.text_area :payment_notes %>
+  <div class="control-group">
+    <%= f.label :payment_notes, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :payment_notes %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :date_flag %><br />
-    <%= f.check_box :date_flag %>
+  <div class="control-group">
+    <%= f.label :date_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :date_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :season_flag %><br />
-    <%= f.check_box :season_flag %>
+  <div class="control-group">
+    <%= f.label :season_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :season_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :regnum_flag %><br />
-    <%= f.check_box :regnum_flag %>
+  <div class="control-group">
+    <%= f.label :regnum_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :regnum_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :totalreceipts_flag %><br />
-    <%= f.check_box :totalreceipts_flag %>
+  <div class="control-group">
+    <%= f.label :totalreceipts_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :totalreceipts_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :payment_notes_flag %><br />
-    <%= f.check_box :payment_notes_flag %>
+  <div class="control-group">
+    <%= f.label :payment_notes_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :payment_notes_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :page_text %><br />
-    <%= f.text_area :page_text %>
+  <div class="control-group">
+    <%= f.label :page_text, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :page_text %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :page_text_flag %><br />
-    <%= f.check_box :page_text_flag %>
+  <div class="control-group">
+    <%= f.label :page_text_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :page_text_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :total_receipts_recorded_l %><br />
-    <%= f.text_field :total_receipts_recorded_l %>
+  <div class="control-group">
+    <%= f.label :total_receipts_recorded_l, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :total_receipts_recorded_l %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :total_receipts_recorded_s %><br />
-    <%= f.text_field :total_receipts_recorded_s %>
+  <div class="control-group">
+    <%= f.label :total_receipts_recorded_s, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :total_receipts_recorded_s %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :signatory %><br />
-    <%= f.text_field :signatory %>
+  <div class="control-group">
+    <%= f.label :signatory, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :signatory %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :signatory_flag %><br />
-    <%= f.check_box :signatory_flag %>
+  <div class="control-group">
+    <%= f.label :signatory_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :signatory_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :rep_flag %><br />
-    <%= f.check_box :rep_flag %>
+  <div class="control-group">
+    <%= f.label :rep_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :rep_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :misc_notes %><br />
-    <%= f.text_area :misc_notes %>
+  <div class="control-group">
+    <%= f.label :misc_notes, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :misc_notes %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :misc_notes_flag %><br />
-    <%= f.check_box :misc_notes_flag %>
+  <div class="control-group">
+    <%= f.label :misc_notes_flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :misc_notes_flag %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :for_editor_notes %><br />
-    <%= f.text_area :for_editor_notes %>
+  <div class="control-group">
+    <%= f.label :for_editor_notes, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :for_editor_notes %>
+    </div>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
+
+</fieldset>
 <% end %>
+</div>
