--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -30,23 +30,27 @@ $().ready(function() {
 
 <%#= render :partial => './navigation', :locals => { :highlight => :registers } %>
 
-<div id='registers'>
-  <div class='left'>
+<div class='row-fluid' id='registers'>
+  <div class='span2 left'>
     <div id='season' class='facet' title='Seasons'></div>
     <div id='weekday' class='facet' title='Weekdays'></div>
     <div id='total_receipts_recorded_l' class='facet' title='Total Receipts (Livre)'></div>
   </div>
 
-  <div id='results'></div>
+  <div class='span4' id='results'></div>
 
-  <div class='right'>
-    <div id='title1' class='facet' title='Play 1'></div>
-    <div id='author1' class='facet' title='Author 1'></div>
-    <div class='clear'></div>
-    <div id='title2' class='facet' title='Play 2'></div>
-    <div id='author2' class='facet' title='Author 2'></div>
-    <div id='verification_state' class='facet' title='Verification State (DUMMY DATA)'></div>
-    <div id='register_contributor_name' class='facet' title='Register Contributor/Verifier' ></div>
-    <!-- div id='total_receipts' class='facet' title='Total Receipts'></div -->
+  <div class='span6 right'>
+    
+    <div class='span3'>
+      <div id='title1' class='facet' title='Play 1'></div>
+      <div id='author1' class='facet' title='Author 1'></div>
+      <div id='title2' class='facet' title='Play 2'></div>
+    </div>
+    <div class='span3'>
+      <div id='author2' class='facet' title='Author 2'></div>
+      <div id='verification_state' class='facet' title='Verification State (DUMMY DATA)'></div>
+      <div id='register_contributor_name' class='facet' title='Register Contributor/Verifier' ></div>
+      <!-- div id='total_receipts' class='facet' title='Total Receipts'></div -->
+    </div>
   </div>
 </div>
