--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
               <span class='user_info'><%= current_user.first_name %> <%= current_user.last_name %></span>
 	      (<span class='user_info'><%= current_user.email %></span>)
 	      <%= link_to "Log Out", :destroy_user_session %></li>
+            <% else %>
+	      <%= link_to "Sign In", :new_user_session %></li>
 	    <% end %>
 	  </ul>
 	</div>
