Tons of visual tweaks, and you can edit the ticket sales successfully from the form. Woohoo!

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,3 +27,12 @@ body { padding-top: 0px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
+@navbarLinkColorActive: #87cefa;
+
+// @gridColumns: 15;
+// @gridColumnWidth: 50px;
+// @gridGutterWidth: 14px;
+
+@baseFontSize: 16px;
+@baseFontFamily: "Georgia";
