--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,15 +22,12 @@
 
 	  <ul class='nav pull-right'>
 	    <%# Can't figure out how to add this charset to file without making the *server* barf?  What am I doing wrong? %>
-            <li><%= link_to "Registers List", :registers %></li>
+            <!-- li><%= link_to "Registers List", :registers %></li -->
 	    <% if current_user %>
-	    <!-- li><%#= link_to "Manage Users", :users %></li -->
-	    <li class="logout">Logged in as:
-              <span class='user_info'><%= current_user.first_name %> <%= current_user.last_name %></span>
-	      (<span class='user_info'><%= current_user.email %></span>)
-	      <%= link_to "Log Out", :destroy_user_session %></li>
+	    <li class='active'><a href="#">Logged in as: <%= current_user.first_name %> <%= current_user.last_name %> (<%= current_user.email %>)</a></li>
+            <li><%= link_to "Log Out", :destroy_user_session %></li>
             <% else %>
-	      <%= link_to "Sign In", :new_user_session %></li>
+	    <li class='active'><%= link_to "Sign In", :new_user_session %></li>
 	    <% end %>
 	  </ul>
 	</div>
